outbound phone secret

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,8 +6,8 @@ node_compat = true
 [vars]
 DOC_ID = "fjzTtJl5Ah"
 TABLE_ID = "grid-Te4_AGhpYu"
-OUTBOUND_NUMBER = "+18178998501"
 
 # The necessary secrets are:
 # - CODA_API_KEY
+# - OUTBOUND_PHONE
 # Run `wrangler secret put <NAME> <VALUE>` for each of these
