--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "wrangler publish"
   },
   "dependencies": {
-    "body-parser": "^1.20.0"
+    "body-parser": "^1.20.0",
+    "fuse.js": "^6.6.2"
   }
 }
