--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ compatibility_date = "2022-06-22"
 node_compat = true
 
 [vars]
-DOC_ID = "fjzTtJl5Ah"
+DOC_ID = "8BR8m3RdC_"
 TASK_TABLE_ID = "grid-Te4_AGhpYu"
 TYPES_TABLE_ID = "grid-VtK-u41v14"
 
