change to new doc

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,9 +4,9 @@ compatibility_date = "2022-06-22"
 node_compat = true
 
 [vars]
-DOC_ID = "8BR8m3RdC_"
-TASK_TABLE_ID = "grid-Te4_AGhpYu"
-TYPES_TABLE_ID = "grid-VtK-u41v14"
+DOC_ID = "fuE0EJRftY"
+TASK_TABLE_ID = "grid-3l8w7D_AVl"
+TYPES_TABLE_ID = "grid-57eD53TLPI"
 
 # The necessary secrets are:
 # - CODA_API_KEY
