--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ compatibility_date = "2022-06-22"
 node_compat = true
 
 [vars]
-DOC_ID = "fuE0EJRftY"
+DOC_ID = "sjaB3PxyeS"
 TASK_TABLE_ID = "grid-3l8w7D_AVl"
 TYPES_TABLE_ID = "grid-57eD53TLPI"
 
